# CPP_CMake_Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
install/include/: math.h  student.h
src/: main.cpp  student.cpp
tests/: test_math.cpp
